infra/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gyant-service
  namespace: gyant
spec:
  type: LoadBalancer
  selector:
    app: gyant
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
