infra/k8s/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: <SERVICE>-virtualservice
spec:
  hosts:
  - <HOST>
  gateways:
  - <SERVICE>-gateway
  http:
  - match:
    - uri:
        prefix: /<SERVICE>
    route:
    - destination:
        host: <SERVICE>-svc
        port:
          number: 80
